dependecy inject structure changed